; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/extr_cam_queue.c_camq_fini.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/extr_cam_queue.c_camq_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.camq = type { i32* }

@M_CAMQ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @camq_fini(%struct.camq* %0) #0 {
  %2 = alloca %struct.camq*, align 8
  store %struct.camq* %0, %struct.camq** %2, align 8
  %3 = load %struct.camq*, %struct.camq** %2, align 8
  %4 = getelementptr inbounds %struct.camq, %struct.camq* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %17

7:                                                ; preds = %1
  %8 = load %struct.camq*, %struct.camq** %2, align 8
  %9 = getelementptr inbounds %struct.camq, %struct.camq* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i32 1
  store i32* %11, i32** %9, align 8
  %12 = load %struct.camq*, %struct.camq** %2, align 8
  %13 = getelementptr inbounds %struct.camq, %struct.camq* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = load i32, i32* @M_CAMQ, align 4
  %16 = call i32 @free(i32* %14, i32 %15)
  br label %17

17:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @free(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
